--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "node-google-translate-skidz": "^1.1.2"
   }
